
CHANGES (since 1.31)
====================

+ improved console with command history and TAB-completion
+ obituary messages (new DAMAGE.OBITUARY field)
+ two new Action buttons for RTS scripting
+ better crosshairs, more configurable
+ new RTS command: ONCEILINGHEIGHT (Andrew Baker)

- support for keys on the numeric keypad
- improved various defaults (e.g. WASD movement)
- new Lua function: hud.play_sound()
- shorter cheat code for 'killall'
- better HOM detection (debug_hom cvar)
- new 'goobers' cvar for a fun effect
- old EDGE title screens retired

- fixed 16-rotation sprites
- fixed some colormap issues
- fixed slowdown with savegames on large maps
- fixed teleporting into walls bug (with help from Andrew Baker)
- fixed bug with LOSE_BENEFIT on ammo limits
- fixed weapon refire accuracy after a loadgame
- fixed dynamic lights on translucent MD2 skins
- fixed excessive warnings for missing textures
- fixed gamma to be restored at exit
- fixed display of gamma-change messages
- fixed crashes with extra aggression
- fixed some Timidity issues
